--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,12 @@
   "license": "BSD-2-Clause",
   "keywords": ["problem-details", "RFC-7807", "http", "api"],
   "authors": [
-    {"name": "Veaceslav Medvedev", "email": "slavcopost@gmail.com"}
+    {"email": "slavcopost@gmail.com", "name": "Veaceslav Medvedev"}
   ],
   "require": {
-    "php": "^7.1"
+    "php": "^7.1",
+    "ext-json": "*",
+    "fig/http-message-util": "^1.1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.1",
@@ -15,12 +17,12 @@
   },
   "autoload": {
     "psr-4": {
-      "Zee\\Problems\\": ["src/"]
+      "Zee\\ProblemDetails\\": ["src/"]
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Zee\\Problems\\Tests\\": ["tests/"]
+      "Zee\\ProblemDetails\\Tests\\": ["tests/"]
     }
   },
   "scripts": {
